syntax = "proto3";

package pointcloud;

message PointField {
    string name = 1;
    uint32 offset = 2;
    uint32 datatype = 3;
    uint32 count = 4;
}

message PointCloud2 {

    message Header {
        double stamp = 1;
        string frame_id = 2;
    }

    Header header = 1;
    uint32 height = 2;
    uint32 width = 3;
    repeated PointField fields = 4;
    bool is_bigendian = 5;
    uint32 point_step = 6;
    uint32 row_step = 7;
    bytes data = 8;
    bool is_dense = 9;

}